--- a/vue/package.json
+++ b/vue/package.json
@@ -12,15 +12,19 @@
     "axios": "^0.19.2",
     "better-scroll": "^1.15.2",
     "element-ui": "^2.13.0",
+    "highlight.js": "^9.18.1",
     "iview": "^1.0.1",
     "jquery": "^3.4.1",
+    "marked": "^0.8.2",
     "pug-html-loader": "^1.1.5",
     "pug-plain-loader": "^1.0.0",
     "toml": "^2.3.3",
     "toml-loader": "^1.0.0",
     "vue": "^2.5.17",
+    "vue-meditor": "^2.1.1",
     "vue-router": "^3.0.1",
     "vue-slim-better-scroll": "^1.7.1",
+    "vue-totop": "^1.0.3",
     "vuescroll": "^4.15.0-beta.1",
     "vuex": "^3.0.1"
   },
